# AMLD2025

./: .env  .gitignore  001_finetuning.ipynb  README.md  models.py  policy_analysis_notebook.py  pyproject.toml
01_basic_rag/: AMLD2025_BasicRAG.ipynb  basic_rag_colab.ipynb  basic_rag_colab_solution.ipynb
02_graph_rag/: cli.py  main.py  retrieve.py  solve_claims.py  workshop_retriever.ipynb
02_graph_rag/config/: retriever_settings.py
02_graph_rag/database/: memgraph_client.py
02_graph_rag/experiments/: evaluate.py
02_graph_rag/experiments/generation-1/run_20250131_092023_openai_gpt-4o/: progressive_metrics.json
02_graph_rag/experiments/generation-1/run_20250131_115240_openai_gpt-4o/: progressive_metrics.json
02_graph_rag/memgraph-platform/: docker-compose.yml
03_finetuning_and_rl/: 001_finetuning.ipynb  001_finetuning_colab.ipynb  002_reinforcement_learning.ipynb  002_reinforcement_learning_colab.ipynb
data/: claims_dataset_v2_manual.json
data/llamaparse/: motor_2021.json  motor_2021.md  motor_2021_short.md
graph_rag/: .env.example  README.md  __init__.py  cli.py  workshop_retriever.ipynb
graph_rag/config/: settings.py
graph_rag/experiments/generation-0/: solved_claims.json
graph_rag/experiments/generation-1/: solved_claims_20250127_193115_openai_gpt-4o.json
graph_rag/experiments/generation-1/run_20250207_153940_openai_gpt-4o/: progressive_metrics.json
graph_rag/retriever/: retriever.py
graph_rag/services/: openai_service.py
graph_rag/utils/: text_processing.py
