[project]
name = "amld2025"
version = "0.1.0"
description = "Workshop: Leveraging Large Language Models for Intelligent Claim Handling: A Hands-On Industry Case Study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "jupyter>=1.1.1",
    "neo4j>=5.28.1",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.5",
]
