[project]
name = "amld2025"
version = "0.1.0"
description = "Workshop: Leveraging Large Language Models for Intelligent Claim Handling: A Hands-On Industry Case Study"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "backoff>=2.2.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "unsloth>=2025.2.5",
    "vllm>=0.7.2",
    "neo4j>=5.28.1",
    "numpy>=1.24.0,<2.0.0",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },

]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.5",
]
